Fixed gorm tags
Added functions to manipulate models
Added new handle to swagger
